[gd_scene load_steps=2 format=3 uid="uid://c5yjeo3w70mgw"]

[ext_resource type="Script" path="res://Scenes/CardTable.gd" id="1_uaip2"]

[node name="CardTable" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uaip2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ShuffleDeck" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 352.0
offset_bottom = 256.0
text = "Shuffle"

[node name="Draw" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 352.0
offset_bottom = 384.0
text = "Draw"

[node name="Output" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 352.0
offset_bottom = 512.0
text = "Show Player Decks"

[node name="ShowDeck" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 386.0
offset_top = 331.0
offset_right = 536.0
offset_bottom = 375.0
text = "Show Deck"

[node name="OutputBox" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 576.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 608.0
theme_override_colors/default_color = Color(1, 1, 1, 1)

[connection signal="button_down" from="Panel/ShuffleDeck" to="." method="_on_shuffle_deck_button_down"]
[connection signal="button_down" from="Panel/Draw" to="." method="_on_draw_button_down"]
[connection signal="button_down" from="Panel/Output" to="." method="_on_output_button_down"]
[connection signal="button_down" from="Panel/ShowDeck" to="." method="_on_show_deck_button_down"]
